# causal-flare

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
benchmark/: README.md  benchmark_block_causal.py  benchmark_block_causal_sdpa_flex.py  benchmark_prefill_decode.py  benchmark_separated_mamba_style_triton.py  benchmark_stablemax_variants.py  benchmark_train_step.py  chunked_flare_large_d_h100.md  chunked_flare_matrix_workflow.md  describe_tuning_catalog.py  flare_inference_matrix_workflow.md  kernel_sweep_utils.py  measure_cold_start.py  profile_chunked_flare.py  profile_flare_inference.py  profile_flash_attention2_driver.py  profile_kernel_ncu.py  profile_recurrent_flare.py  profile_semi_ar_output_driver.py  profile_semi_ar_prepare_driver.py  profile_stablemax_output_driver.py  reduce_fa2_warp_specialize.py  runtime_tuning_ownership.md  semi_ar_matrix_workflow.md  tune_chunked_flare_matrix.py  tune_flare_inference_matrix.py  tune_recurrent_flare_matrix.py  tune_semi_ar_matrix.py  tuning_catalog.py
benchmark/implementations/: flash_attention2_triton.py  reference_ops.py
causal_flare/: __init__.py  __main__.py  _common.py  _reference_utils.py  benchmark_prefill_decode.py  benchmark_train_step.py  block_causal.py  chunked.py  chunked_old.py  dense.py  docs.md  inference.py  recurrent.py  test.py  test_finite_difference.py  test_flare.py  test_flare_reference.py  torch.py
causal_flare/autoregressive/: __init__.py  dense.py  docs.md  experimental.py  experimental_triton.py  inference.py  recurrent.py  reference.py  separated.py  separated_mamba_style.py  separated_mamba_style_triton.py  separated_trition.py  separated_triton.py  ssd_rank1_triton.py  ssd_rank1_triton_debug.py  ssd_rank3_triton.py  ssd_rank4_exp.py  ssd_rank4_triton.py  ssd_single_rank1.py  stablemax.py  stablemax_triton.py  training.py
causal_flare/semi_autoregressive/: __init__.py  docs.md  inference.py  reference.py  training.py
scripts/: install.sh  submit.sh
skills/chunked-flare-profile/: SKILL.md
skills/import-smoke/: SKILL.md
testing/: README.md  conftest.py  distributed_runner.py  test.py  test_block_causal.py  test_cached_suites.py  test_distributed_runner.py  test_finite_difference.py  test_flare.py  test_regression_suites.py
testing/autoregressive/: __init__.py  experimental.py  test_cached_suites.py  test_experimental_triton.py  test_finite_difference.py  test_flare.py  test_flare_reference.py  test_regression_suites.py  test_separated.py  test_separated_mamba_style.py  test_separated_mamba_style_triton.py  test_separated_mamba_vendor_adapters.py  test_separated_trition.py  test_separated_triton.py  test_ssd_rank1_triton.py  test_stablemax.py
(+38 files in other folders)
